Added Movies List Component with Language and Location Filters

--- a/AngularApplication/src/styles.css
+++ b/AngularApplication/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+h2 {
+    background-color:#B22222;
+    padding: 30px;
+    text-align: center;
+    font-size: 35px;
+    color: white;
+  }
+  .container {
+    margin: 20px auto;
+  }
