--- a/AngularApplication/src/app/movies-details/movies-details.component.html
+++ b/AngularApplication/src/app/movies-details/movies-details.component.html
@@ -1,3 +1,9 @@
-<p>
-  movies-details works!
-</p>
+<h2>{{movieDetails.title}}
+  <hr>
+  {{movieDetails.listingType}} (Rating: {{movieDetails.imdbRating}})
+</h2>
+<div class="row">
+  <div class="col-sm-2">
+      <button type="button" (click)="gotBack()" class="form-control btn btn-primary">Back</button>
+  </div>
+</div>
