--- a/AngularApplication/src/styles.css
+++ b/AngularApplication/src/styles.css
@@ -8,3 +8,11 @@ h2 {
   .container {
     margin: 20px auto;
   }
+  .img-container {
+    display:flex;
+     flex-wrap: wrap;
+    align-content: space-evenly;
+    }
+    .img-container img{
+    width:50%;
+    }
